# garmin_trainer

./: .env.example  .gitignore  .mcp.json  CREDENTIAL_AUTOSYNC_PLAN.md  LICENSE  OURA_DASHBOARD_PLAN.md  PRIVACY.md  PROJECT_PLAN.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SECURITY_V2.md  coaching_app_plan.md
reactive-training-app/backend/: pyproject.toml
reactive-training-app/backend/src/reactive_training/: __init__.py  config.py  main.py
reactive-training-app/backend/tests/: __init__.py  conftest.py
shared/garmin_client/: pyproject.toml
shared/garmin_client/src/garmin_client/: __init__.py  baselines.py  causality.py  insights.py
shared/garmin_client/tests/: __init__.py  test_baselines.py  test_causality.py  test_insights.py
training-analyzer/: .env.example  CURRENT_PROBLEMS.md  README.md  i18n-redirect-issues.md  middleware-issues-report.md  pyproject.toml  requirements.txt
training-analyzer/docs/: DEEP_ANALYSIS.md  README.md  SPORTS_SCIENCE_IMPLEMENTATION.md  STRAVA_INTEGRATION_PLAN.md  VO2_MAX_FEATURE.md  ai-agentic-architecture.md  analysis-and-roadmap.md  api-reference.md  architecture.md  gamification-level-rewards.md  getting-started.md  internationalization.md  metrics-explained.md  ui-panels.md
training-analyzer/docs/workout-analysis-database/: AI_USAGE_TRACKING.md  AUTHENTICATION.md  DATABASE_SCALING_PLAN.md  DEPLOYMENT_GAPS.md  FEATURE_GATING.md  GARMIN_SYNC.md  MULTI_USER_ARCHITECTURE.md  QUOTA_SYSTEM.md  README.md  REPOSITORY_LAYER.md  SUPABASE_MIGRATION.md  TESTING.md
training-analyzer/frontend/: middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
training-analyzer/frontend/public/: manifest.json  sw.js
training-analyzer/frontend/src/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
training-analyzer/frontend/src/contexts/: auth-context.tsx  onboarding-context.tsx  preferences-context.tsx
training-analyzer/reactive-training-app/backend/: pyproject.toml
training-analyzer/scripts/: fix_db_permissions.sh  generate_security_keys.py  migrate_to_supabase.py
training-analyzer/src/: cli.py  config.py  main.py
training-analyzer/src/agents/: __init__.py  adaptation_agent.py  analysis_agent.py  base.py  chat_agent.py  coach_agent.py  cycling_agent.py  langchain_agent.py  orchestrator.py  swim_agent.py  workout_agent.py
training-analyzer/src/analysis/: __init__.py  condensation.py  goals.py  trends.py
training-analyzer/src/api/: deps.py  exception_handlers.py  quota.py  schemas.py
training-analyzer/src/db/: __init__.py  connection_pool.py  database.py  schema.py
training-analyzer/src/integrations/: base.py  strava.py
training-analyzer/src/llm/: __init__.py  context_builder.py  prompt_sanitizer.py  prompts.py  providers.py
training-analyzer/src/metrics/: __init__.py  load.py  power.py  swim.py  vdot.py  zones.py
training-analyzer/src/models/: __init__.py  analysis.py  athlete_context.py  deviation.py  explanations.py  gamification.py  patterns.py  personal_records.py  plans.py  race_pacing.py  recovery.py  running_economy.py  strava.py  workouts.py
training-analyzer/src/observability/: __init__.py  langfuse_config.py  scoring.py
training-analyzer/src/recommendations/: __init__.py  readiness.py  workout.py
training-analyzer/src/services/: __init__.py  achievement_service.py  adaptation.py  ai_cost_calculator.py  auth_service.py  base.py  chat_service.py  cleanup_scheduler.py  coach.py  comeback_service.py  comparison_service.py  consent_service.py  data_retention_service.py  deviation_detection.py  emotional_messaging_service.py  encryption.py  enrichment.py  feature_gate.py  garmin_scheduler.py  garmin_sync_service.py  identity_service.py  manual_workout_service.py  mileage_cap_service.py  pattern_recognition_service.py  pr_detection_service.py  preferences_service.py  race_pacing_service.py  recovery_module_service.py  running_economy_service.py  safety_service.py  social_proof_service.py  strava_service.py  training_pattern_service.py  vdot_service.py  workout_query_service.py
training-analyzer/src/tools/: __init__.py  action_tools.py  query_tools.py  retry.py  tool_metadata.py
training-analyzer/src/training_analyzer/: __init__.py  cli.py  config.py  exceptions.py  main.py
training-analyzer/src/utils/: __init__.py  log_sanitizer.py  token_counter.py
training-analyzer/tests/: __init__.py  test_ai_usage_repository.py  test_analysis.py  test_auth_service.py  test_database.py  test_enrichment.py  test_explanations.py  test_feature_gate.py  test_garmin_credentials_repository.py  test_integration.py  test_llm_providers.py  test_metrics.py  test_prev_day_activity.py  test_recommendations.py  test_subscription_repository.py  test_user_repository.py  test_vo2max.py
training-analyzer/tests/agents/: test_adaptation_agent.py  test_analysis_agent.py  test_chat_agent.py  test_coach_agent.py  test_cycling_agent.py  test_plan_agent.py  test_swim_agent.py  test_triathlon_agent.py
training-analyzer/tests/api/: test_analysis.py  test_plan_adaptation.py  test_plans.py  test_workouts.py
training-analyzer/tests/db/: test_schema.py
training-analyzer/tests/fit/: __init__.py  test_encoder.py
training-analyzer/tests/integrations/: __init__.py  test_base.py  test_garmin.py  test_strava.py
training-analyzer/tests/metrics/: __init__.py  test_power.py  test_swim.py
training-analyzer/tests/services/: test_adaptation.py  test_deviation_detection.py  test_fatigue_prediction.py
training-analyzer/tests/utils/: test_log_sanitizer.py  test_token_counter.py
whoop-dashboard/: README.md  VISION.md  app-on-device-deployment-plan.md  package-lock.json  package.json  pyproject.toml
whoop-dashboard/docs/: README.md  api-reference.md  architecture.md  getting-started.md  ios-deployment.md  metrics-explained.md
whoop-dashboard/frontend/: .env.example  .gitignore  capacitor.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json
whoop-dashboard/src/whoop_dashboard/: __init__.py  cli.py
whoop-dashboard/tests/: __init__.py  test_recovery.py
(+891 files in other folders)
