[project]
name = "whoop-dashboard"
version = "0.1.0"
description = "WHOOP-style health dashboard powered by Garmin data"
requires-python = ">=3.10"
dependencies = [
    "garmin-client",  # Local shared package
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
whoop = "whoop_dashboard.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whoop_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
