[project]
name = "garmin-client"
version = "0.1.0"
description = "Shared Garmin Connect client for data extraction"
requires-python = ">=3.10"
dependencies = [
    "garth>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
