[project]
name = "reactive-training"
version = "0.1.0"
description = "Reactive training application with Garmin Connect integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "rich>=13.0",
    # API
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # LLM
    "openai>=1.10.0",
    # Utils
    "python-dotenv>=1.0.0",
    # Garmin Connect
    "garminconnect>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[project.scripts]
reactive-training = "reactive_training.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reactive_training"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"
